# Group_9_GPU

./: .gitignore  README.md
DD2360-PIC/: CMakeLists.txt  Makefile  README.md  check.py
DD2360-PIC/include/: Alloc.h  BC.h  Basic.h  EMfield.h  EMfield_aux.h  Grid.h  IC.h  InterpDensNet.h  InterpDensSpecies.h  Parameters.h  Particles.h  Particles_aux.h  RW_IO.h  Smoothing.h  Timing.h
DD2360-PIC/inputfiles/: GEM_2D_1.inp
DD2360-PIC/src/: BC.cpp  Basic.cpp  EMfield.cpp  EMfield_aux.cpp  Grid.cpp  InterpDensNet.cpp  InterpDensSpecies.cpp  Particles.cpp  Particles.cu  Particles_aux.cpp  RW_IO.cpp  Timing.cpp  TransArraySpace3D.cpp  sputniPIC.cpp
